# new-to-tech-streamlit

./: .gitignore  README.MD  crud.py  csv_loader.py  main.py  model.py  notes.db  pyproject.toml  schema.py
.streamlit/: secrets.toml
