[tool.poetry]
name = "ntt-streamlit-sqlite"
version = "0.1.0"
description = "Streamlit-on-SQLite sample app for NTT practical session"
authors = ["Matt Alioto <matthew.j.alioto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
