[tool.poetry]
name = "new-to-tech-streamlit"
version = "0.1.0"
description = "Streamlit-on-SQLite sample app for NTT practical session"
authors = ["Matt Alioto <matthew.j.alioto@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
pandas = "^2.2.2"
pydantic = "^2.7.4"
sqlalchemy = "^2.0.31"
streamlit-sqlalchemy = "^0.2.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
